# MANOS

./: Dockerfile  references.txt  setup.sh
install/: local_setup.sh  setup.sh
install/CustomRosController/share/CustomRosController/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/camera/lib/camera/: cam
install/camera/share/camera/: package.sh  package.xml
install/castelet/lib/castelet/: castelet
install/hand_detector_package/share/hand_detector_package/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/camera/: CMakeLists.txt  setup.py
src/camera/camera/: camera.py
src/castelet/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/castelet/castelet/: BindingDialog.py  Calibration_Label.py  CasteletWindow.py  CustomLabel.py  castelet.py  castelet.ui
src/castelet/turtleSimControl/: TurtleSimControl.py
src/custom_msg/: CMakeLists.txt
src/custom_ros_controller/: package.xml  setup.cfg  setup.py
src/custom_ros_controller/custom_ros_controller/: custom_ros_controller.py  picarchu_controller.py
src/custom_ros_controller/servo_control/: CMakeLists.txt  setup.py
src/hand_detector/: setup.py
src/hand_detector/hand_detector/: hand_detector.py
src/host_listener_package/: setup.cfg  setup.py
src/host_listener_package/host_listener_package/: host_listener.py  host_listener.py.save.1
src/launch/: demo_launch.py
src/manos_manager/: package.xml  setup.cfg  setup.py
src/manos_manager/manos_manager/: manos_manager.py
(+120 files in other folders)
